# memoir

./: .dockerignore  .env.example  .gitignore  .rustfmt.ignore  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  bacon.toml  biome.jsonc  codecompanion-workspace.json  docker-compose.yml  mise.local.example.toml  mise.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api-service/: .env.example  Cargo.toml  Dockerfile  buf.gen.yaml  project.json
apps/api-service/migration/: Cargo.toml
apps/api-service/migration/src/: lib.rs  m20000000_000002_add_updated_at_trigger.rs  m20251212_091452_create_users_table.rs  m20251212_091515_create_organizations_table.rs  m20251212_091525_create_organization_members_table.rs  m20251212_091536_create_user_plans_table.rs
apps/api-service/src/: consts.rs  main.rs
apps/api-service/src/clients/: mod.rs  zitadel.rs
apps/api-service/src/commands/: server.rs
apps/api-service/src/middleware/: ext.rs  mod.rs  organization_context.rs  user_context.rs
apps/api-service/src/models/: cursor.rs  mod.rs  organization_members.rs  organizations.rs  users.rs
apps/api-service/src/services/: admin.rs  billing.rs  mod.rs  organizations.rs  role_defaults.rs  users.rs
apps/api-service/src/test_utils/: context.rs  mod.rs  stripe.rs
apps/api-service/src/traits/: mod.rs
apps/chat-service/: .env.example  Cargo.toml  Dockerfile  buf.gen.yaml  project.json
apps/chat-service/migration/: Cargo.toml
apps/chat-service/migration/src/: lib.rs  m20250122_000001_create_channels.rs  m20250122_000002_create_channel_members.rs  m20250122_000003_create_channel_events.rs  m20250122_000004_create_message_reactions.rs  m20250122_000005_create_message_attachments.rs  m20250122_000006_create_read_receipts.rs  m20250122_000007_create_channel_bans.rs  m20250122_000008_create_channel_mutes.rs  m20250122_000009_create_message_reports.rs  m20250122_000010_create_moderation_log.rs  m20250122_000011_create_auto_mod_settings.rs
apps/chat-service/src/: consts.rs  context.rs  main.rs
apps/chat-service/src/commands/: server.rs
apps/chat-service/src/models/: channel_events.rs  mod.rs
apps/chat-service/src/services/: channel.rs  chat.rs  mod.rs  moderation.rs
apps/example-grpc-service/: .env.example  Cargo.toml  buf.gen.yaml  project.json
apps/example-grpc-service/migration/: Cargo.toml
apps/example-grpc-service/migration/src/: m20000000_000002_add_updated_at_trigger.rs
apps/example-grpc-service/src/: context.rs
apps/example-grpc-service/src/commands/: server.rs
apps/example-grpc-service/src/models/: mod.rs
apps/memoir-service/: .env.example  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  project.json
apps/memoir-service/migration/: Cargo.toml
apps/memoir-service/migration/src/: lib.rs  m20000000_000001_nanoid.rs  m20000000_000001_nanoid.sql  m20000000_000003_create_users.rs  m20000000_000004_create_api_keys.rs  m20000000_000005_create_bootstrap_tokens.rs  m20000000_000006_create_memories.rs  main.rs
apps/memoir-service/src/: context.rs  main.rs
apps/memoir-service/src/api/: mod.rs  playground.rs
apps/memoir-service/src/commands/: auth.rs  example.rs  server.rs
apps/memoir-service/src/integration_tests/: admin.rs  common.rs  memory.rs  mod.rs
apps/memoir-service/src/middleware/: auth.rs  jwt.rs  mod.rs
apps/memoir-service/src/models/: mod.rs
apps/memoir-service/src/services/: admin.rs  auth.rs  conversions.rs  memory.rs  mod.rs  wire.rs
apps/notification-service/: .env.example  Cargo.toml  Dockerfile  buf.gen.yaml  project.json
apps/notification-service/migration/: Cargo.toml
apps/notification-service/migration/src/: lib.rs  m20250122_000001_create_notifications.rs  m20250122_000002_create_notification_preferences.rs
apps/notification-service/src/: consts.rs  context.rs  main.rs
apps/notification-service/src/api/: mod.rs  test_context.rs
apps/notification-service/src/commands/: server.rs
apps/notification-service/src/models/: mod.rs  notification_preferences.rs  notifications.rs
apps/notification-service/src/services/: mod.rs
apps/rig-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  project.json  tatus
apps/rig-service/migration/: Cargo.toml
apps/rig-service/migration/src/: lib.rs  m20000000_000001_nanoid.sql  m20260104_070556_create_providers_table.rs  m20260104_070833_create_secrets_table.rs  m20260104_070900_create_language_models_table.rs  m20260104_070902_create_provider_rates_table.rs  m20260104_070917_create_agents_table.rs  m20260104_070929_create_conversations_table.rs  m20260104_070945_create_messages_table.rs  m20260117_000001_create_tools_tables.rs  m20260118_000001_create_user_assistants_table.rs  m20260220_000001_create_documents_table.rs  m20260220_000002_create_document_groups_table.rs  m20260220_000003_create_document_group_memberships_table.rs  m20260222_000001_create_conversation_documents_table.rs  m20260328_000001_create_agent_users_table.rs  m20260328_000002_create_conversation_users_table.rs
apps/rig-service/src/: consts.rs  context.rs  main.rs
apps/rig-service/src/actors/: chat_session.rs  error.rs  inference.rs  mod.rs  session_registry.rs
apps/rig-service/src/agents/: config.rs  error.rs  messages.rs  mod.rs  rig.rs  runtime.rs  streaming.rs  system_prompt.rs
apps/rig-service/src/api/: crypto.rs  mod.rs  ringbuffer.rs  tool.rs
apps/rig-service/src/clients/: api_service.rs  gemini.rs  mod.rs  notification.rs  ollama.rs  openai.rs  qdrant.rs  storage.rs
apps/rig-service/src/commands/: mod.rs  server.rs
apps/rig-service/src/models/: agent_secrets.rs  agent_tools.rs  agent_users.rs  agents.rs  conversation_documents.rs  conversation_users.rs  conversations.rs  cursor.rs  document_group_memberships.rs  document_groups.rs  documents.rs  language_models.rs  messages.rs  mod.rs  provider_rates.rs  provider_secrets.rs  providers.rs  secrets.rs  tool_secrets.rs  (+2 more)
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/api/: mod.rs
cli/src/commands/: demo.rs  mod.rs
(+748 files in other folders)
