[workspace]
resolver = "2"
members = [
  "apps/memoir-service",
  "apps/memoir-service/migration",
  "packages/common-rs",
  "packages/memoir-core",
  "packages/memoir-core/migration",
]

[workspace.dependencies]
color-eyre = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1.49" }
tonic = { version = "0.14" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[profile.release]
lto = "thin"
