# Adds recommended packages below
[package]
name = "startup-cli"
version = "0.1.0"
description = "A cli to help with startup.ai management"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
thiserror = "2.0.11"
xshell = "0.2.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
bcrypt = "0.15"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
ratatui = "0.30"
futures = "0.3"
libc = "0.2"

# Kubernetes and infrastructure dependencies
kube = { version = "0.87", features = [
  "client",
  "runtime",
  "derive",
  "rustls-tls",
] }
k8s-openapi = { version = "0.20", features = ["latest"] }
serde_yaml = "0.9"
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tempfile = "3.0"
which = "6.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"
open = "5.0"
jsonwebtoken = "9.0"
rsa = { version = "0.9", features = ["pem"] }

[dependencies.clap]
version = "4.0"
features = ["derive", "env"]
