[package]
name = "example-grpc-service"
version = "0.1.0"
description = "Example gRPC service (gRPC microservice) for memoir"
authors = ["Myles Berueda <myles@polypixel.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
color-eyre = { workspace = true }
common-rs = { path = "../../packages/common-rs" }
dashmap = "6.1"
example-grpc-service-migration = { path = "./migration" }
http = { version = "1.4" }
pbjson-types = "0.9.0"
proto-rs = { path = "../../packages/proto-rs" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-health = { version = "0.14.2" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

[dependencies.sea-orm]
version = "2.0.0-rc.20"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[features]
default = []
integration = []
unit = []

[dev-dependencies]
serial_test = "3.1.1"
test-context = "0.5"
