[package]
name = "memoir-service"
version = "0.1.0"
description = "Memoir gRPC service — auth + memory APIs"
authors = ["Myles Berueda <myles@polypixel.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "memoir"
path = "src/main.rs"

[dependencies]
base64 = { version = "0.22" }
chrono = "0.4"
color-eyre = { workspace = true }
common-rs = { path = "../../packages/common-rs" }
dashmap = "6.1"
memoir-service-migration = { path = "./migration" }
http = { version = "1.4" }
pbjson-types = "0.9.0"
memoir-sdk = { package = "polypixel-memoir-sdk", path = "../../packages/memoir-sdk-rs" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-health = { version = "0.14.2" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

[dependencies.sea-orm]
version = "2.0.0-rc.20"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[features]
default = []
integration = []
unit = []

[dev-dependencies]
serial_test = "3.1.1"
test-context = "0.5"
