[package]
name = "memoir-service"
version = "0.1.0"
description = "Memoir gRPC service — auth + memory APIs"
authors = ["Myles Berueda <myles@polypixel.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "memoir"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8" }
base64 = { version = "0.22" }
chrono = "0.4"
color-eyre = { workspace = true }
common-rs = { path = "../../packages/common-rs" }
dashmap = "6.1"
dotenvy = "0.15"
futures = { version = "0.3" }
memoir-core = { package = "polypixel-memoir-core", path = "../../packages/memoir-core" }
memoir-service-migration = { path = "./migration" }
http = { version = "1.4" }
jsonwebtoken = { version = "9.3" }
pbjson-types = "0.9.0"
memoir-sdk = { package = "polypixel-memoir-sdk", path = "../../packages/memoir-sdk-rs", features = ["reflection"] }
qdrant-client = { version = "1.18" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-health = { version = "0.14.2" }
tonic-reflection = { version = "0.14.2" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

[dependencies.sea-orm]
version = "2.0.0-rc.20"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[features]
default = []
integration = []
unit = []

[dev-dependencies]
anyhow = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
nanoid = "0.4"
serial_test = "3.1.1"
test-context = "0.5"
tokio-stream = "0.1"
tokio-util = { version = "0.7" }
tower = { version = "0.5", features = ["util"] }
