[package]
name = "notification-service"
version = "0.1.0"
description = "Notification service (gRPC microservice) for memoir"
authors = ["Myles Berueda <myles@polypixel.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bon = { workspace = true }
chrono = "0.4"
color-eyre = { workspace = true }
common-rs = { path = "../../packages/common-rs" }
platform-rs = { path = "../../packages/platform-rs" }
fred = { version = "10.1.0", features = ["subscriber-client"] }
http = { version = "1.4" }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
nanoid = "0.4.0"
notification-service-migration = { path = "./migration" }
pbjson-types = "0.9.0"
proto-rs = { path = "../../packages/proto-rs" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.17"
tonic = { workspace = true }
tonic-health = { version = "0.14.2" }
tower = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

[dependencies.sea-orm]
version = "2.0.0-rc.20"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[features]
default = []
integration = []
unit = []

[dev-dependencies]
notification-service-migration = { path = "./migration" }
serial_test = "3.1.1"
test-context = "0.5"
