[package]
name = "rig-service"
version = "0.1.0"
description = "Rig (agent) service (gRPC microservice) for memoir"
authors = ["Myles Berueda <myles@polypixel.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-types = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
common-rs = { path = "../../packages/common-rs" }
dashmap = { workspace = true }
platform-rs = { path = "../../packages/platform-rs" }
fastembed = { version = "5" }
fred = { workspace = true, features = ["subscriber-client"] }
http = { workspace = true }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
kameo = { workspace = true }
nanoid = { workspace = true }
ort = { version = "2.0.0-rc.11" }
pbjson-types = "0.9.0"
phf = { workspace = true, features = ["macros"] }
base64 = "0.22"
proto-rs = { path = "../../packages/proto-rs" }
qdrant-client = { workspace = true }
reqwest = { workspace = true, features = ["json", "form"] }
rig-core = { workspace = true }
rig-service-migration = { path = "./migration" }
schemars = "1.0.4"
sea-orm = { workspace = true, features = ["postgres-vector"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7"
tonic = { workspace = true }
tonic-health = { version = "0.14.2" }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
uuid = { workspace = true }

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
branch = "master"
features = ["derive"]

[dependencies.kreuzberg]
workspace = true
features = [
  "pdf",
  "bundled-pdfium",
  "excel",
  "office",
  "email",
  "html",
  "xml",
  "archives",
  "chunking",
  "keywords",
]

[features]
default = []
integration = []
unit = []

[dev-dependencies]
base64 = "0.22"
common-rs = { path = "../../packages/common-rs", features = ["test_utils"] }
platform-rs = { path = "../../packages/platform-rs", features = ["test_utils"] }
rig-service-migration = { path = "./migration" }
serial_test = "3.1.1"
test-context = "0.5"
tokio = { workspace = true, features = ["test-util"] }
