[package]
name = "memoir-service-migration"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
once_cell = "1.20"
regex = { version = "1.12.2", features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.20"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres",        # `DATABASE_DRIVER` feature
]
